# room-service/src/main/java/com/example/service/dto/UserGetDto.java
@@ -1,0 +1,14 @@
+package com.example.service.dto;
+
+import java.time.LocalDateTime;
+
+public record UserGetDto(
+        LocalDateTime created_at,
+        String email,
+        String id,
+        String login,
+        String role,
+        String status,
+        LocalDateTime updated_at
+) {
+}
